# docker-root

./: .travis.yml  README.md
.circleci/: config.yml
.github/workflows/: docker-image.yml
clas12/: Dockerfile  clas12.gcard
clas12/bck/: Dockerfile.bck  Dockerfile.sl7  dock.bck
dev-EvioToRoot/: Dockerfile  SConstruct
dev-clara/: Dockerfile  Dockerfile.bck  zshrc
dev-clara/oh-my-zsh/cache/: DEBS_avail  DEBS_installed  docker_subcommands  python_modules  svn-cmds
dev-clara/oh-my-zsh/themes/: my.zsh-theme
dev-coatjava/: Dockerfile  Dockerfile.bck  bos2evio
dev-env/: .dockerignore  Dockerfile  zshrc
dev-env/oh-my-zsh/cache/: docker-search-hadoo
dev-env/singularity/: build.sh  dev-env.def
dev-jupyter/: Dockerfile  Dockerfile.bck  README.md  ipython.sh
dev-jupyter/jupyter/: jupyter_notebook_config.py  migrated
dev-jython/: Dockerfile
python3/: Dockerfile  entry_point.sh  test.ipynb
python3/.cache/jedi/CPython-36-30/: cf52c2de18ad0c05e28d5c3f66bedc14a81ef0d66fd22eb563b363e1e64f8a28-16f86d062c642a3dec6f57cdbecaaa80f0d5b7aaa371e7c881c44205a044212c.pkl  cf52c2de18ad0c05e28d5c3f66bedc14a81ef0d66fd22eb563b363e1e64f8a28-45d652dacb21284b253f7806e59fd6e354167ce0623745bf6e48d7afc821d474.pkl  cf52c2de18ad0c05e28d5c3f66bedc14a81ef0d66fd22eb563b363e1e64f8a28-741b61bea7b9963f9b2cacfaf619a95185fddbef2dffc5e2b51b37e44bbd884a.pkl  cf52c2de18ad0c05e28d5c3f66bedc14a81ef0d66fd22eb563b363e1e64f8a28-a61038089dc304be43f1c746d3b03d4e3a3a7627ba2d1b61576a564fc369d252.pkl  cf52c2de18ad0c05e28d5c3f66bedc14a81ef0d66fd22eb563b363e1e64f8a28-ad8bc25eca235797fe2d9de475847dd2c909976d124a831f9579c1484d454efa.pkl
python3/.cache/matplotlib/: fontlist-v300.json
python3/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
python3/.ipython/profile_default/: history.sqlite
python3/.jupyter/: migrated
python3/.local/share/jupyter/: nbsignatures.db  notebook_secret
python3/.local/share/jupyter/runtime/: notebook_cookie_secret
python3/.rootnb/: .rootcommit  jupyter_notebook_config.py  migrated
python3/.rootnb/kernels/root/: kernel.json
rootv5/: Dockerfile
rootv5/base/: Dockerfile  build.sh  centos6.def
rootv5/centos/: Dockerfile  root-entrypoint.sh
rootv5/centos7/: Dockerfile
rootv5/cernlib/: CMakeLists.txt
rootv5/cernlib/cmake/: cernlib-config.cmake.in
rootv5/cernlib/geant321/: CMakeLists.txt
rootv5/cernlib/mathlib/: CMakeLists.txt
rootv5/cernlib/mclibs/: CMakeLists.txt
rootv5/cernlib/packlib/: CMakeLists.txt
rootv5/cernlib/pawlib/: CMakeLists.txt
rootv5/ubuntu/: Dockerfile
rootv6/: Dockerfile
rootv6/alpine/: Dockerfile
rootv6/centos/: Dockerfile  Dockerfile.base
rootv6/python3/: Dockerfile
rootv6/python3/dev-env/: Dockerfile
rootv6/python3/dev-env/singularity/: build.sh
rootv6/python3/dev-jupyter/: Dockerfile
rootv6/python3/dev-jupyter/jupyter/: jupyter_notebook_config.py  mycert.pem
rootv6/ubuntu/: Dockerfile  root-entrypoint.sh
